fix: 🐛 fix horiz scrollbar always appearing

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -60,8 +60,6 @@ html {
   --primary-color: $primary-color;
   --primary-color-medium: #2699ff;
   --primary-color-light: $primary-color-light;
-
-  width: 100vw;
 }
 
 @media (max-width: 800px) {
